package usantatecla.connect4.views;

public interface StartView {

	public void show();

}
